fix: fix problem with white space between footer and 'our friends' section in the pets page for desktop width

--- a/shelter/Pets/style.css
+++ b/shelter/Pets/style.css
@@ -1077,7 +1077,7 @@ img {
   align-items: center;
   row-gap: 60px;
   padding-top: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 99px;
 }
 @media (max-width: 540px) {
   .our-friends__container {
