--- a/shelter/src/sass/components/Main/_our-friends.scss
+++ b/shelter/src/sass/components/Main/_our-friends.scss
@@ -20,7 +20,7 @@
   @include flex-model-one-column ($align-content: center, $justify-content: center, $align-items: center);
   row-gap: 60px;
   padding-top: 80px;
-  padding-bottom: 100px;
+  padding-bottom: 99px;
 
   // Typography
 
